--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,8 +3,12 @@ html
 	head
 		title= title
 		link(rel='stylesheet', href='leanback/leanbackPlayer.default.css')
+		link(rel='stylesheet', href='stylesheets/style.css')
 		script(src='http://code.jquery.com/jquery-1.6.1.min.js')
 		script(src='/leanback/leanbackPlayer.pack.js')
 		script(src='/leanback/leanbackPlayer.en.js')
+		script(src='/scripts/video-player-options.js')
+		script(src='/scripts/tags.js')
 
-	body!=body
+	body
+		block content
