Fixed display of selection.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,10 +5,13 @@ html
 		link(rel='stylesheet', href='leanback/leanbackPlayer.default.css')
 		link(rel='stylesheet', href='stylesheets/style.css')
 		script(src='http://code.jquery.com/jquery-1.6.1.min.js')
+		script(src='http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.4/underscore-min.js')
+		script(src='http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js')
 		script(src='/leanback/leanbackPlayer.pack.js')
 		script(src='/leanback/leanbackPlayer.en.js')
 		script(src='/scripts/video-player-options.js')
 		script(src='/scripts/tags.js')
+		script(src='/models/tag.js')
 
 	body
 		block content
