--- a/views/index.jade
+++ b/views/index.jade
@@ -4,14 +4,30 @@ block content
 	div#info
 		p Welcome to #{title}.
 
-	<div class="leanback-player-video">
-	<video width="360" height="240" controls onloadedmetadata="injectTag()">
-	<source src="/media/video/bunny.ogg" type='video/ogg'/>
-	</video>
-	</div>
+	div#player
+		<div class="leanback-player-video">
+		<video id="media_player" width="360" height="240" controls onloadedmetadata="injectTag()">
+		<source src="/media/video/bunny.ogg" type='video/ogg'/>
+		</video>
+		</div>
 
-	<button id="startTagButton" type="button">Start tag</button>
-	<button id="endTagButton" type="button">End tag</button>
-	<button id="clearTagButton" type="button">Clear Selection</button>
-	<button id="saveTagButton" type="button">Save Tag</button>
+	div#buttons
+		<button id="startTagButton" type="button" onclick="startTag('video')">Start tag</button>
+		<button id="endTagButton" type="button" onclick="endTag('video')">End tag</button>
+		<button id="clearTagButton" type="button">Clear Selection</button>
+		<button id="saveTagButton" type="button">Save Tag</button>
+
 	ul#tagList
+
+	div#buttons
+		<button id="startAudioButton" type="button" onclick="startTag('audio')">Start tag</button>
+		<button id="endAudioButton" type="button" onclick="endTag('audio')">End tag</button>
+		<button id="clearTagButton" type="button">Clear Selection</button>
+		<button id="saveTagButton" type="button">Save Tag</button>
+
+	div#player
+		<div class="leanback-player-video">
+		<video width="360" height="60" controls onloadedmetadata="injectTag()">
+		<source src="/media/audio/walter.mp3" type='audio/mpeg'/>
+		</video>
+		</div>
